2009-02-15 Denton Woods <doomwiz@users.sf.net>
	* il_blp.c (iLoadBlpInternal): Finished testing and fixed BLP2 RAW with 1-bit alpha.
	* il_dicom.c: Added this file.
	* config.h.win: Added defines for new image formats.
	* il_io.c / il_jp2.c: Added .jpx, .j2k and .j2c extensions for JPEG 2000.
	* il_io.c / il_jpeg.c: Added .jif and .jfif extensions for JPEG.

2009-02-14 Denton Woods <doomwiz@users.sf.net>
	* il_blp.c (iLoadBlp1): Support for mipmaps added.
	* il_gif.h: Moved iCopyPalette declaration out of here into il_internal.h.
	* il_gif.c: Moved iCopyPalette definition out of here into il_pal.c.
	* projects/Mathematica: Added this folder.	
	* il_fits.c (iCheckFits): Implemented this.
	* il_fits.c (iLoadFitsInternal): Renormalized float and double data.
	* il_blp.c (iLoadBlp1): Added seeks to image data (not necessarily following palette).
	* il_blp.c (iLoadBlpInternal): Added loading for BLP2 RAW with 1-bit alpha.

2009-02-13 Denton Woods <doomwiz@users.sf.net>
	* WindowsTest.cpp: Added slideshows capabilities with Page Up and Page Down.
	* il_jpeg.c:357: Added ilFixImage call.
	* il_jpeg.c (ilLoadFromJpegStruct): Changed return value to the return of ilFixImage.
	* il_blp.c:466-467: Fixed to read these images properly.
	* WindowsTest Project: Changed x64 debug to use runtime library debug DLLs.

2009-02-12 Denton Woods <doomwiz@users.sf.net>
	* il_ftx.c: Added this file.
	* lib/Makefile.am and src-IL/src/Makefile.am: Added il_ftx.c to source line.
	* il_io.c: Added Ftx loading function calls.
	* il_blp.c: Added BLP1-loading functions.

2009-02-11 Denton Woods <doomwiz@users.sf.net>
	* il_jpeg.c (ilSaveJpegL): Changed the itellw call to after iSetOutputLump
	  (was returning bad values, since the lump was not set yet).
	* il_io.c (ilSaveL): Changed return value to Ret and got rid of IL_FALSE check.
	* il_bmp.c, il_dds-save.c, il_hdr.c, il_jp2.c, il_pcx.c, il_png.c, il_pnm.c, il_psd.c, il_raw.c,